crates/oxc_css/tests/error/scss/value/expression.snap
---
source: crates/oxc_css/tests/error.rs
---
error: component value is expected
  ┌─ expression.scss:1:7
  │
1 │ a {a: .}
  │       ^


